[package]
name = "rush"
version = "0.1.0"
authors = ["Antonín Dufka <dufkan@pm.me>"]
edition = "2018"
license = "GPLv3"

[dependencies]
nix = "0.13.0"
termion = "1.5.1"
pest = "2.1.1"
pest_derive = "2.1.0"
directories = "1.0.2"
serde = { version = "1.0.90", features = ["derive"] }
toml = "0.5.0"
clap = "2.33.0"