[package]
name = "rush"
version = "0.1.0"
authors = ["Antonín Dufka <dufkan@pm.me>"]
edition = "2018"
license = "GPLv3"

[dependencies]
nix = "0.25.0"
termion = "1.5.6"
pest = "2.3.1"
pest_derive = "2.3.1"
directories = "4.0.1"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
clap = { version = "3.2.22", features = ["derive"] }
